--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "validator": "^13.12.0"
